<resources>
    <string name="app_name">Toolbox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="weatherinfo_city">城市：</string>
    <string name="weatherinfo_time">发布时间：</string>
    <string name="weatherinfo">天气情况：</string>
    <string name="weatherinfo_temp">气温：</string>

    <string name="identity_info_sex">性别：</string>
    <string name="identity_info_birthday">出生日期：</string>
    <string name="identity_info_address">所在地区：</string>

    <string name="ipaddress_info_ip">IP：</string>
    <string name="ipaddress_info_country">国家：</string>
    <string name="ipaddress_info_city">地区：</string>
    <string name="ipaddress_info_carrier">服务提供商：</string>
    
    <string name="unknown">N/A</string>

    <string name="weather_search_hint">请输入查询的城市名称</string>
    <string name="weather_search_error">没有相关城市的天气信息</string>

    <string name="identity_search_hint">请输入查询的身份证号码</string>
    <string name="identity_search_error">没有相关的身份证信息</string>

    <string name="ipaddress_search_hint">请输入查询的IP地址</string>
    <string name="ipaddress_search_error">没有相关的IP地址信息</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_identity">身份证查询</string>
    <string name="title_activity_ipaddress">IP地址查询</string>
    <string name="title_activity_weather">天气查询</string>
    <string name="title_activity_girls_pic">美女图片</string>
    <string name="title_activity_list_view">ListView Demo</string>
    <string name="title_activity_local_service_test">Service Demo</string>
    <string name="title_activity_ocr">OCR文字识别</string>
    
    <string name="local_service_started">Local Service Started</string>
    <string name="local_service_stopped">Local Service Stopped</string>
    <string name="local_service_connected">Local Service Connected</string>
    <string name="local_service_disconnected">Local Service Disconnected</string>
    <string name="title_activity_cursor_loader_list">CursorLoader Example</string>
    <string name="title_activity_toast">无需权限悬浮窗Demo</string>
</resources>
