<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.syl.toolbox.views.fragments.IPAddressActivityFragment">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/search_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/ipaddress_search_hint"
            android:inputType="text"
            android:imeOptions="actionGo"/>

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_search_36dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/search_layout"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipaddress_info_ip"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/ip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/country_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ip_layout"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipaddress_info_country"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/country_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/city_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/country_layout"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipaddress_info_city"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/city_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/carrier_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/city_layout"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipaddress_info_carrier"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/carrier_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"/>
    </LinearLayout>
</RelativeLayout>
