<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.syl.toolbox.views.fragments.IdentityActivityFragment">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/search_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/identity_search_hint"
            android:inputType="text"
            android:imeOptions="actionGo"/>

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_search_36dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sex_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/search_layout"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identity_info_sex"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/sex_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/birthday_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/sex_layout"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identity_info_birthday"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/birthday_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/birthday_layout"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identity_info_address"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"/>
    </LinearLayout>
</RelativeLayout>
